Filtres fonctionnels sur la page operation

--- a/Frontend/BudgetTrackerUI/src/app/cc-operations/cc-operations.html
+++ b/Frontend/BudgetTrackerUI/src/app/cc-operations/cc-operations.html
@@ -7,8 +7,8 @@
 
     <div class="filter-header-container gap-4 mb-6">
 
-      <app-date-filter mode="detailed" [showLastImportOption]="true"
-        (filterChanged)="onFilterChanged($event)" (importClicked)="onImport()">
+      <app-date-filter [showLastImportOption]="true" (filterChanged)="onFilterChanged($event)"
+        (importClicked)="onImport()">
       </app-date-filter>
 
       <mat-form-field appearance="outline" class="w-[300px]">
