--- a/Frontend/BudgetTrackerUI/src/app/cc-operations-list/cc-operations-list.html
+++ b/Frontend/BudgetTrackerUI/src/app/cc-operations-list/cc-operations-list.html
@@ -11,6 +11,7 @@
 
     <div class="grid-wrapper" [class.hidden]="isLoading()">
         <ag-grid-angular style="width: 100%;" class="ag-theme-alpine shadow-sm" 
+        [preventDefaultOnContextMenu]="true"
         [rowData]="resultatOperations()"
             [defaultColDef]="defaultColDef" 
             [columnDefs]="columnDefs" 
@@ -23,7 +24,8 @@
             (gridReady)="onGridReady($event)"
             (cellValueChanged)="onCellValueChanged($event)"
             (modelUpdated)="onModelUpdated()"
-            (filterChanged)="onFilterChanged()">
+            (filterChanged)="onFilterChanged()"
+            (cellContextMenu)="onCellContextMenu($event)">
         </ag-grid-angular>
     </div>
 </div>
