--- a/Frontend/BudgetTrackerUI/src/app/cc-dashboard/cc-dashboard.html
+++ b/Frontend/BudgetTrackerUI/src/app/cc-dashboard/cc-dashboard.html
@@ -17,8 +17,10 @@
   </mat-chip-listbox>
 
   <app-cc-evolution-chart [data]="evolutionData()" (periodChanged)="onPeriodZoomed($event)"></app-cc-evolution-chart>
-  <app-pie-chart [data]="categoryData()"></app-pie-chart>
-  <app-cc-operations-list [customFilters]="zoomFilters()" [pageSize]="10"
+  <app-treemap-color [data]="categoryData()"></app-treemap-color>
+  <app-pie-chart chartTitle="Dépenses" [data]="onlyExpensesData()"></app-pie-chart>
+  <app-pie-chart chartTitle="Revenus" [data]="onlyRevenuesData()"></app-pie-chart>
+  <app-cc-operations-list [operations]="operations()" [customFilters]="zoomFilters()" [pageSize]="10"
     domLayout="autoHeight" sortColumn="montant" [noSaveAllSuggestedButton]="true"></app-cc-operations-list>
 
 </div>
