fix données opérations suite modif du composant list

--- a/Frontend/BudgetTrackerUI/src/app/cc-dashboard/cc-dashboard.html
+++ b/Frontend/BudgetTrackerUI/src/app/cc-dashboard/cc-dashboard.html
@@ -84,7 +84,7 @@
 
       <div class="pt-4">
         <app-cc-operations-list [operations]="operations()" [customFilters]="zoomFilters()" [pageSize]="10"
-          domLayout="autoHeight" sortColumn="montant" [noSaveAllSuggestedButton]="true">
+          domLayout="autoHeight" sortColumn="montant" [SaveAllSuggestedButton]="false">
         </app-cc-operations-list>
       </div>
     </mat-expansion-panel>
