Ajout de la page  Savings statement : liste des relevés des livrets + saisie nouveau relevé

--- a/Frontend/BudgetTrackerUI/src/app/nav-menu/nav-menu.html
+++ b/Frontend/BudgetTrackerUI/src/app/nav-menu/nav-menu.html
@@ -50,4 +50,17 @@
     </a>
   </div>
 
+  <div class="nav-group">
+    <h3 class="group-title">Livrets</h3>
+    <a mat-list-item routerLink="/pea-dashboard" routerLinkActive="active-link">
+      <mat-icon matListItemIcon>dashboard</mat-icon>
+      <span matListItemTitle>Dashboard</span>
+    </a>
+
+    <a mat-list-item routerLink="/savings-statement" routerLinkActive="active-link">
+      <mat-icon matListItemIcon>table_view</mat-icon>
+      <span matListItemTitle>Statement</span>
+    </a>
+  </div>
+
 </mat-nav-list>
