Correctif pour format date dans le filtre et dans le datepicker d'une ligne

--- a/Frontend/BudgetTrackerUI/src/app/home/home.html
+++ b/Frontend/BudgetTrackerUI/src/app/home/home.html
@@ -1,4 +1,8 @@
 <p>home works!</p>
 
 <p>A faire : </p>
-
+<li>Page pour la liste des livrets (proprio, statut, ...)</li>
+<li></li>
+<li></li>
+<li></li>
+<li></li>
