Ajout page avec liste des livrets (éditable)

--- a/Frontend/BudgetTrackerUI/src/app/nav-menu/nav-menu.html
+++ b/Frontend/BudgetTrackerUI/src/app/nav-menu/nav-menu.html
@@ -61,6 +61,11 @@
       <mat-icon matListItemIcon>table_view</mat-icon>
       <span matListItemTitle>Statement</span>
     </a>
+
+    <a mat-list-item routerLink="/savings-account-list" routerLinkActive="active-link">
+      <mat-icon matListItemIcon>list</mat-icon>
+      <span matListItemTitle>Liste livrets</span>
+    </a>
   </div>
 
 </mat-nav-list>
