Mise en place page Assurance vie/SCPI (historique, ajout)

--- a/Frontend/BudgetTrackerUI/src/app/nav-menu/nav-menu.html
+++ b/Frontend/BudgetTrackerUI/src/app/nav-menu/nav-menu.html
@@ -51,11 +51,16 @@
   </div>
 
   <div class="nav-group">
-    <h3 class="group-title">Livrets</h3>
-    <a mat-list-item routerLink="/pea-dashboard" routerLinkActive="active-link">
-      <mat-icon matListItemIcon>dashboard</mat-icon>
-      <span matListItemTitle>Dashboard</span>
+    <h3 class="group-title">Assurance vie</h3>
+
+    <a mat-list-item routerLink="/li-statement" routerLinkActive="active-link">
+      <mat-icon matListItemIcon>account_balance_wallet</mat-icon>
+      <span matListItemTitle>Relevés</span>
     </a>
+  </div>
+
+  <div class="nav-group">
+    <h3 class="group-title">Livrets</h3>
 
     <a mat-list-item routerLink="/savings-statement" routerLinkActive="active-link">
       <mat-icon matListItemIcon>table_view</mat-icon>
