Amélioration affichage ligne Assurance vie (regroupement par date, séparation Date et nom)

--- a/Frontend/BudgetTrackerUI/src/app/life-insurance-statement/life-insurance-statement.html
+++ b/Frontend/BudgetTrackerUI/src/app/life-insurance-statement/life-insurance-statement.html
@@ -8,7 +8,7 @@
         </button>
     </div>
 
-    <ag-grid-angular style="width: 100%; height: 700px;" class="ag-theme-alpine" [columnDefs]="columnDefsHistory"
+    <ag-grid-angular style="width: 100%; height: 700px;" class="ag-theme-alpine" [columnDefs]="columnDefsHistory" [defaultColDef]="defaultColDef"
         [rowData]="historyData()" [gridOptions]="gridOptions" (cellValueChanged)="onCellValueChanged($event)">
     </ag-grid-angular>
 </div>
