--- a/Frontend/BudgetTrackerUI/src/app/nav-menu/nav-menu.html
+++ b/Frontend/BudgetTrackerUI/src/app/nav-menu/nav-menu.html
@@ -54,7 +54,7 @@
     <h3 class="group-title">Assurance vie</h3>
 
     <a mat-list-item routerLink="/li-statement" routerLinkActive="active-link">
-      <mat-icon matListItemIcon>account_balance_wallet</mat-icon>
+      <mat-icon matListItemIcon>list</mat-icon>
       <span matListItemTitle>Relevés</span>
     </a>
   </div>
