--- a/Frontend/BudgetTrackerUI/src/app/nav-menu/nav-menu.html
+++ b/Frontend/BudgetTrackerUI/src/app/nav-menu/nav-menu.html
@@ -1,13 +1,13 @@
 <mat-nav-list class="azure-nav">
 
   <div class="nav-group">
+    <h3 class="group-title">GLOBAL</h3>
+
     <a mat-list-item routerLink="/" routerLinkActive="active-link" [routerLinkActiveOptions]="{exact: true}">
       <mat-icon matListItemIcon>area_chart</mat-icon>
       <span matListItemTitle>Patrimoine</span>
     </a>
-  </div>
 
-  <div class="nav-group">
     <a mat-list-item routerLink="/account-status" routerLinkActive="active-link" [routerLinkActiveOptions]="{exact: true}">
       <mat-icon matListItemIcon>error</mat-icon>
       <span matListItemTitle>Status</span>
